Bug 1680909 - Fix slowdown in X keyboard layout handling. r=stransky

When ibus input method is changed, Firefox reinitializes the KeymapWrapper
object, causing duplicate calls to g_signal_connect. If Firefox is running
long enough, duplicate handlers accumulate, and Firefox starts to barrage the
X server with XkbGetUpdatedMap/XkbGetControls calls, slowing the X server and
itself down.

A symptom of this problem is that after switching the input methods, Firefox
ignores the input for a while (up to several seconds).

Differential Revision: https://phabricator.services.mozilla.com/D98847